@@ -216,6 +216,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       the internal mode selector for transforms.
     - X2Go/Server/Agent/NX/Options.pm: rename options parameter in
       transform_intermediate to intermediate.
+    - X2Go/Server/Agent/NX/Options.pm: document key-value pairs with either
+      empty keys or empty (!= non-existent) values.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
